log
Tue Apr 28 03:32:13 AM UTC 2026: 
 tests:  1|8
total_score: 0/60
398bc50
Fri May  1 12:13:39 AM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:18: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Wincompatible-pointer-types]
   48 |     newMap->root = newMap;
      |                  ^
treemap.c:49:21: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Wincompatible-pointer-types]
   49 |     newMap->current = newMap;
      |                     ^
9beec43
Fri May  1 12:19:13 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
5abd215
Fri May  1 12:38:27 AM UTC 2026: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:68:29: error: ‘ket’ undeclared (first use in this function); did you mean ‘key’?
   68 |         if(tree->lower_than(ket, aux->pair->key) == 1){
      |                             ^~~
      |                             key
treemap.c:68:29: note: each undeclared identifier is reported only once for each function it appears in
6e94c65
Fri May  1 12:38:46 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
42afe1a
Fri May  1 01:53:10 AM UTC 2026: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:105:21: error: ‘newNode’ undeclared (first use in this function)
  105 |     tree->current = newNode;
      |                     ^~~~~~~
treemap.c:105:21: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:92:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   92 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
6f93f65
Fri May  1 01:53:57 AM UTC 2026: 
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:105:21: error: ‘newNode’ undeclared (first use in this function)
  105 |     tree->current = newNode;
      |                     ^~~~~~~
treemap.c:105:21: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:92:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   92 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
7be9dba
Fri May  1 01:57:01 AM UTC 2026: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  13|5
total_score: 25/60
7db22df
Fri May  1 05:43:04 PM UTC 2026: 
 tests:  13|5
total_score: 25/60
9e73b8b
